Fixed some variable names, removed dead code, changed h1 and h2 text alignment to come from h1 and h2 classes instead of custom classes

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,12 +1,4 @@
-.center {
-  text-align: center;
-}
-
-.color {
-  color: lightblue;
-}
-
-.white-center-background {
+.white-background {
   background-color: white;
 }
 
@@ -88,6 +80,7 @@ dfn {
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
+  text-align: center;
 }
 mark {
   background-color: #ff0;
@@ -278,6 +271,7 @@ h2 {
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
   line-height: 1.1;
+  text-align: center;
 }
 h3 {
   margin-left: 0;
